use focusedProperty to build a delete button

--- a/timer/src/timer/timer.css
+++ b/timer/src/timer/timer.css
@@ -1,3 +1,9 @@
+/*
+ * Created by GuoJunjun <junjunguo.com> on 16.1.2015.
+ *
+ * This file is part of timer
+ */
+
 .root {
     -fx-background-color: rgb(60, 60, 60);
     }
