--- a/timer/src/timer/timer.fxml
+++ b/timer/src/timer/timer.fxml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+
+<!--
+  ~ Created by GuoJunjun <junjunguo.com> on 16.1.2015.
+  ~
+  ~ This file is part of timer
+  -->
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="360.0" style="-fx-background-color: rgb(60,60,60);" stylesheets="@timer.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="timer.Controller">
     <columnConstraints>
@@ -36,17 +43,17 @@
                 <Label prefHeight="22.0" prefWidth="61.0" text="Seconds" textFill="#7c7a7a" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                 <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="28.0" text=":" textFill="#fbf9f9" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <font>
-                        <Font name="Arial" size="50.0" />
+                        <Font name="Arial" size="48.0" />
                     </font>
                 </Label>
                 <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="28.0" text=":" textAlignment="CENTER" textFill="#fcf8f8" GridPane.columnIndex="3" GridPane.rowIndex="1">
                     <font>
-                        <Font name="Arial" size="50.0" />
+                        <Font name="Arial" size="48.0" />
                     </font>
                 </Label>
-                <TextField fx:id="hoursField" alignment="CENTER" prefHeight="58.0" prefWidth="90.0" promptText="00" text="00" GridPane.rowIndex="1" />
-                <TextField fx:id="minutesField" alignment="CENTER" prefHeight="58.0" prefWidth="90.0" promptText="00" text="00" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                <TextField fx:id="secondsField" alignment="CENTER" pickOnBounds="false" prefHeight="58.0" prefWidth="90.0" promptText="00" style="-fx-padding: 0;" text="00" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                <TextField fx:id="hoursField" alignment="CENTER" prefHeight="58.0" prefWidth="90.0" GridPane.rowIndex="1" />
+                <TextField fx:id="minutesField" alignment="CENTER" prefHeight="58.0" prefWidth="90.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                <TextField fx:id="secondsField" alignment="CENTER" pickOnBounds="false" prefHeight="58.0" prefWidth="90.0" style="-fx-padding: 0;" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
             </children>
         </GridPane>
         <GridPane GridPane.rowIndex="1">
