--- a/Calculator/src/Calculator/calculator.css
+++ b/Calculator/src/Calculator/calculator.css
@@ -9,6 +9,13 @@
     -fx-padding          : 0 10 0 0;
     -fx-font-size        : 65;
     }
+.warning {
+    -fx-background-color : #000000;
+    -fx-text-fill        : #F68B2A;
+    -fx-alignment        : center;
+    -fx-padding          : 0 10 0 0;
+    -fx-font-size        : 16;
+    }
 
 .button {
     -fx-font-size         : 20;
