--- a/GreenAppointment/src/GreenAppointment/edit.fxml
+++ b/GreenAppointment/src/GreenAppointment/edit.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appointment.EditController">
+<GridPane alignment="center" hgap="10" styleClass="thebackground" stylesheets="@style.css" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GreenAppointment.EditController">
    <children>
       <GridPane prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
@@ -38,9 +38,9 @@
                 <RowConstraints maxHeight="6.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField fx:id="textFieldBuildingName" prefHeight="40.0" promptText="Building name" />
-                  <TextField fx:id="textFieldBuildingSection" prefHeight="40.0" promptText="Building section" GridPane.columnIndex="2" />
-                  <TextField fx:id="textFieldRoomnumber" prefHeight="40.0" promptText="Room number" GridPane.columnIndex="4">
+                  <TextField fx:id="textFieldBuildingName" prefHeight="40.0" promptText="Building name" styleClass="inputSection" />
+                  <TextField fx:id="textFieldBuildingSection" prefHeight="40.0" promptText="Building section" styleClass="inputSection" GridPane.columnIndex="2" />
+                  <TextField fx:id="textFieldRoomnumber" prefHeight="40.0" promptText="Room number" styleClass="inputSection" GridPane.columnIndex="4">
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin>
@@ -52,12 +52,12 @@
                   </Label>
                </children>
             </GridPane>
-            <Button mnemonicParsing="false" onAction="#btnSave" prefHeight="40.0" prefWidth="180.0" text="Save &amp; Return" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+            <Button mnemonicParsing="false" onAction="#btnSave" prefHeight="40.0" prefWidth="179.0" text="Save &amp; Return" GridPane.columnIndex="1" GridPane.halignment="LEFT">
                <GridPane.margin>
                   <Insets top="10.0" />
                </GridPane.margin>
             </Button>
-            <TextArea fx:id="textAreaDescription" prefHeight="200.0" prefWidth="200.0" promptText="Descriptions" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextArea fx:id="textAreaDescription" prefHeight="200.0" prefWidth="200.0" promptText="Descriptions" styleClass="inputSection" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
@@ -69,13 +69,13 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="textFieldStartTime" prefHeight="40.0" promptText="Start time" GridPane.columnIndex="2" />
-                  <TextField fx:id="textFieldFinishTime" prefHeight="40.0" promptText="Finish time" GridPane.columnIndex="4">
+                  <TextField fx:id="textFieldStartTime" prefHeight="40.0" promptText="Start time" styleClass="inputSection" GridPane.columnIndex="2" />
+                  <TextField fx:id="textFieldFinishTime" prefHeight="40.0" promptText="Finish time" styleClass="inputSection" GridPane.columnIndex="4">
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <DatePicker fx:id="datePickerEvent" prefHeight="40.0" promptText="select event date" />
+                  <DatePicker fx:id="datePickerEvent" prefHeight="40.0" promptText="select event date" styleClass="inputSection" />
                </children>
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="145.0" />
@@ -91,8 +91,8 @@
             </GridPane>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <TextField fx:id="textFieldRepeatTime" prefHeight="40.0" promptText="Repeat times" GridPane.columnIndex="2" />
-                  <DatePicker fx:id="datePickerRepeat" prefHeight="40.0" promptText="Repeat until" />
+                  <TextField fx:id="textFieldRepeatTime" prefHeight="40.0" promptText="Repeat times" styleClass="inputSection" GridPane.columnIndex="2" />
+                  <DatePicker fx:id="datePickerRepeat" prefHeight="40.0" promptText="Repeat until" styleClass="inputSection" />
                </children>
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="145.0" />
@@ -106,7 +106,7 @@
                   <RowConstraints maxHeight="6.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
                </rowConstraints>
             </GridPane>
-            <Label fx:id="labelDescription" text="Description" textAlignment="RIGHT" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <Label fx:id="labelDescription" styleClass="sectionTitle" text="Description" textAlignment="RIGHT" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -114,7 +114,7 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="labelWhere" text="Where" textAlignment="RIGHT" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <Label fx:id="labelWhere" styleClass="sectionTitle" text="Where" textAlignment="RIGHT" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -138,12 +138,12 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Button mnemonicParsing="false" onAction="#btnCancel" prefHeight="40.0" prefWidth="180.0" text="Cancel &amp; Return" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <Button mnemonicParsing="false" onAction="#btnCancel" prefHeight="40.0" prefWidth="178.0" text="Cancel &amp; Return" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <GridPane.margin>
                   <Insets left="40.0" top="10.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" onAction="#btnQuit" prefHeight="40.0" prefWidth="130.0" text="Quit" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+            <Button mnemonicParsing="false" onAction="#btnQuit" prefHeight="40.0" prefWidth="129.0" text="Quit" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
                <GridPane.margin>
                   <Insets right="10.0" top="10.0" />
                </GridPane.margin>
